--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     background-position: center;
 }
 
+* {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+}
+
 .description-box {
     position: absolute;
     top: 50%;
@@ -110,3 +116,32 @@
     letter-spacing: 5px;
 }
 
+.services-box {
+    width: 300px;
+    height: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.103);
+    flex-direction: column;
+    padding: 12px;
+    transition: .5s;
+}
+
+.services-box:hover {
+    animation: Zigzag .4s linear;
+    box-shadow: 0 0 20px black;
+    cursor: pointer;
+    background-color: lightgray;
+    z-index: -1px;
+}
+@keyframes Zigzag {
+    0% {
+        transform: translateY(0px);
+    }
+
+    50% {
+        transform: translateY(-5px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
